# owebpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doxygen.conf
cmake/: common.cmake
console/: CMakeLists.txt
console/include/Exception/: MissingRouteFieldException.hpp  NullOrEmptyRouteFieldException.hpp
console/include/Generation/: RouteCodeGenerator.hpp
console/include/Model/: RouteModel.hpp
console/src/: main.cpp
console/src/Generation/: RouteCodeGenerator.cpp
example/nginx/: CMakeLists.txt  example_config.yaml  nginx.conf
example/nginx/html/: index.html
example/nginx/include/: AuthRoute.hpp  BasicAuthenticator.hpp  BasicURLEncodedDataParser.hpp  MultipleMethodsRouteClass.hpp  NamespaceRouteClass.hpp  NoParamRouteClass.hpp  OneParamRouteClass.hpp  ThreeParamRouteClass.hpp
example/nginx/src/: main.cpp
example/translation/: CMakeLists.txt
example/translation/include/: MemoryTranslator.hpp
example/translation/src/: main.cpp
include/owebpp/: AbstractRoute.hpp  Authenticator.hpp  Config.hpp  HttpMethod.hpp  HttpStatusCode.hpp  Logger.hpp  Request.hpp  Response.hpp  Router.hpp  Translator.hpp
